# instruktor

./: extensions.conf  modul.py  pjsip.conf  test.py  voicemail.conf
seminarske/AHP-metoda/: AHP.py  gui.py  gui.ui  main.py  main.ui
seminarske/angular/: angular guide.txt
seminarske/angular/photo/: README.md  angular.json  package-lock.json  package.json
seminarske/angular/photowall/: app.js  package-lock.json  package.json
seminarske/cppnaloge/: BST_drug.h  main.cc  test
seminarske/excel_nalogi/: nalog-template.xlsm  vpis del.xlsm
seminarske/full-stack-MEAN/: README.md
seminarske/georeference/src/: __main__.py  main.ui
seminarske/gis/docs/: GIS vaja 3.pptx
seminarske/gis/src/: __main__.py  main.ui
seminarske/igra/: CMakeLists.txt  README.md
seminarske/igra/docs/: app.plantuml  domain.plantuml
seminarske/igra/include/app/: colours.h  events.h  game.h  score.h  simbols.h  terminal.h  utils.h  window.h
seminarske/igra/include/domain/: bad_guy.h  fire.h  hero.h  indian.h  indian_team.h  tree.h  warrior.h  world.h
seminarske/igra/include/gui/: MainWindow.h  WorkerThread.h
seminarske/igra/source/: main.cpp
seminarske/igra/source/app/: game.cpp  simbols.cpp  terminal.cpp  utils.cpp  window.cpp
seminarske/igra/source/domain/: bad_guy.cpp  fire.cpp  hero.cpp  indian.cpp  indian_team.cpp  tree.cpp  warrior.cpp  world.cpp
seminarske/igra/source/gui/: MainWindow.cpp  MainWindow.ui  WorkerThread.cpp
seminarske/kalibracija_senzorja/: CMakeLists.txt  main.c
seminarske/labirint/: domain.py  main.py  search.py
seminarske/pid_balansiranje/: pid_zanka.c
seminarske/posevni_met/: GUI.py  Projektna naloga Gregor Podpečan 23150289.ipynb  annual.csv
seminarske/prepoznava_znaka/: README.md  requirements.txt
seminarske/quadTrees/: index.html
seminarske/quadTrees/src/: main.js  (+3 more)
seminarske/risanje/: risar.py  sirjenje_okuzbe.py
seminarske/vislice/: index.css  index.html  index.js
seminarske/vremenski_balon/: Vremenski balon.ipynb
seminarske/watchdog/: README.md  package.json  server.js  watchdog.js
tecaji/html/: README.md
(+58 files in other folders)
